--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
-
-/* Your CSS Code here. */
+.main{
+	Width: 200px;
+Background-color:purple;
+border-left: 5px solid green;
+Padding: 10px;
+	
+}
+#heading{
+	color:white;
+	font-size:20px;
+	text-decoration:underline;
+}
